--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -1,7 +1,16 @@
 {
     "home":{
         "header":"Start",
-        "body":["Angela Davis, a brief biograaphy of a big Woman:"],
+        "body":["Angela Davis, a brief biography of a big Woman:" 
+            , "the project consist in web site development to tell about the history and actions of some black figures in literature."
+            , "the site has been development in the subjects:"
+            , "Web development 2"
+            , "Language portuguese"
+            , "English tecnican"
+            ,"together the sociology teacher: Guilherme Tommaselli", 
+            "The sites that the information has been taken about the life and work of Angela Davis:",
+            "https://brasilescola.uol.com.br/filosofia/angela-davis.htm","https://www.hypeness.com.br/2017/01/a-vida-e-a-luta-de-angela-davis/","https://www.geledes.org.br/angela-davis-2/"
+            ,"Available just in portuguese"],
         "footer":["in progress...","Owners: Exodo Jaffar e João Lucas"]
     },
     "menu":["Start","Essays","Angela Davis","Who are we?","Contact"],
