finalizando a parte teorica

--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -25,7 +25,15 @@
             "- The fame and your risks:",
             "After she joined up the party communist, she was persecuted by the government that watched a dangerous moment in cold war. This fact letted her more revolted with the government, where in response she strogest her ligations with the political militanci. Later, Angela became a simpatizante of social and political group of combat to the racism called \"Black Panther\". After the big increase, in 1970 ,the California government started the discussion about the prohibition of guns port in the street to disarm the Panthers",
             "- The answer",
-            ""
+            "The black Panthers took the decision of go to the assembly and talk about the prohibition. Bob, the organizer, commited a big mistake, he missed the way and went to the plenary. They was armed and that is why the supporters of the ban took advantage of the mistake and declared the episode like a threaten of legislative. The FBI saw a chance of desmoralize and dismantle the group and in this event Angela was accused to be a of minds behind the episode.",
+            "- Just give up? NO",
+            "with the decreted prison, Angela doesn't accepted, ran away and was accompanied by the media day by day in what was one of the biggest human hunts of USA. Angela was arrested in october on city of New York.",
+            "- The World:",
+            "immediately the people created a moviment by the freedom of Davis and the other liders of Panthers. John Lennon, Jean Paul Sartre and the famous conductor Leonard Bernstein were some of figures the supported the moviment.",
+            "- The judgment",
+            "by the lack of evidence, in June of 1972, Angela Yvonne Davis was cleared of accusations.",
+            "- Hard critics:",
+            "In 1975, Angela was accused of hipocrisy by the russian dissident Aleksandr Solzhenitsyn, he was accussing her of be hipocrit by simpatize with the URSS, while neglecting the conditions of politicans prisoners in communists regimes and by ignore a cards of Tchecans politican prisoners asking by help"
         ]
     }
 }
