--- a/src/components/language/pt-br.json
+++ b/src/components/language/pt-br.json
@@ -23,13 +23,15 @@
             "- A Fama e seus Riscos:",
             "Filiou-se ao partido comunista estadunidense e por isso Davis foi perseguida pelo governo que vivia um clima de incerteza da guerra fria. Esse fato a deixou mais revoltada com o governo, onde em resposta aumentou sua ligação com a militância política. Mais tarde tornou-se simpatizante do grupo político e social de combate ao racismo chamado de \"Panteras Negras\". Os Panteras estavam se tornando um grupo muito forte e grande nos EUA. Sua postura contra a violência policia foi um dos principais motivos. Em 1970, em uma tentativa de desarmar as Panteras Negras, o governo do estado da Califórnia discutia a proibição do porte de armas nas ruas.",
             "- E as Panteras?",
-            "As panteras responderam indo até o prédio da assembléia californiana para discutir com os deputados e darem seu ponto de vista. Bob, o organizador da ida, cometeu um grande erro, ele acabou se dirigindo até o plenário onde não era seu objetivp de ida. Por estarem armados o episódio foi declarado como uma tentativa de intimidação do poder legislativo. O FBI enxergou na ocasião a chance de desqualificar e desmantelar os Panteras e nesse meio Angela foi acusada de ser uma das mentoras do episódio.",
+            "As panteras responderam indo até o prédio da assembléia californiana para discutir com os deputados e darem seu ponto de vista. Bob, o organizador da ida, cometeu um grande erro, ele acabou se dirigindo até o plenário onde não era seu objetivo de ida. Por estarem armados o episódio foi declarado como uma tentativa de intimidação do poder legislativo. O FBI enxergou na ocasião a chance de desqualificar e desmantelar os Panteras e nesse meio Angela foi acusada de ser uma das mentoras do episódio.",
             "- Apenas aceitar? NÃO",
             "Com a prisão decretada Angela não a aceitou e fugiu, sendo acompanhada dia a dia pela mídia no que foi uma das maiores caçadas humanas dos EUA. Angela acabou sendo presa em Outubro na cidade de Nova Iorque.",
             "- A resposta do mundo:",
             "Imediatamente foi criado um movimento pela libertação de Angela e outros líderes dos Panteras. John Lennon, Jean Paul Sartre e o famoso maestro Leonard Bernstein foram algumas das figuras que apoiaram o movimento",
             "- O julgamento:",
-            "Pela falta de provas, em Junho de 1972, Angela Yvonne Davis foi declarada inocente por falta de provas. Em 1975, Angela sofreu graves críticas pelo dissidente russo  Aleksandr Solzhenitsyn, ele acusava ele de ser hipócrita por simpatizar com a URSS, ao negligenciar as condições dos prisioneiros políticos em regimes comunistas e por ignorar uma carta de presos políticos tchecos perseguidos pelo estado lhe pedindo ajuda."
+            "Pela falta de provas, em Junho de 1972, Angela Yvonne Davis foi declarada inocente por falta de provas.",
+            "- Duras críticas",
+            "Em 1975, Angela sofreu graves críticas pelo dissidente russo Aleksandr Solzhenitsyn, ele acusava ela de ser hipócrita por simpatizar com a URSS, ao negligenciar as condições dos prisioneiros políticos em regimes comunistas e por ignorar uma carta de presos políticos tchecos perseguidos pelo estado lhe pedindo ajuda."
         ]
     }
 }
