--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -1,18 +1,25 @@
 {
-    "home":{
-        "header":"Start",
-        "body":["Angela Davis, a brief biography of a big Woman:" 
-            , "the project consist in web site development to tell about the history and actions of some black figures in literature."
-            , "the site has been development in the subjects:"
-            , "Web development 2"
-            , "Language portuguese"
-            , "English tecnican"
-            ,"together the sociology teacher: Guilherme Tommaselli", 
-            "The sites that the information has been taken about the life and work of Angela Davis:",
-            "https://brasilescola.uol.com.br/filosofia/angela-davis.htm"
-            ,"https://www.hypeness.com.br/2017/01/a-vida-e-a-luta-de-angela-davis/","https://www.geledes.org.br/angela-davis-2/"
-            ,"Available just in portuguese"],
-        "footer":["in progress...","Owners: Exodo Jaffar e João Lucas"]
+    "home": {
+        "header": "Start",
+        "body": {
+            "header_title":"Angela Davis, a brief biography of a big Woman:", 
+            "content":[
+                "The project consist in web site development to tell about the history and actions of some black figures in literature.",
+                "Nos (os autores do site) escolhemos a autora Angela Davis, e nesse site esteremos mostrando a voce a historia de Angela e sua tragetoria como uma autora negra nos Estados Unidos.",
+                "The site has been development in the subjects:",
+                "Web development 2",
+                "Language portuguese",
+                "English tecnican",
+                "With the help of the sociology teacher: Guilherme Tommaselli",
+                "The sites that the information has been taken about the life and work of Angela Davis:",
+                "https://brasilescola.uol.com.br/filosofia/angela-davis.htm",
+                "https://www.hypeness.com.br/2017/01/a-vida-e-a-luta-de-angela-davis/",
+                "https://www.geledes.org.br/angela-davis-2/",
+                "Available just in portuguese"
+            ]
+        
+        },
+        "footer": ["In progress...","Owners: Exodo Jaffar e João Lucas"]
     },
     "menu":["Start","Essays","Angela Davis","Who are we?","Contact"],
     "headerMenu":"navigate through the menu",
