update: traduz parte faltante

--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -5,7 +5,7 @@
             "header_title":"Angela Davis, a brief biography of a big Woman:", 
             "content":[
                 "The project consist in web site development to tell about the history and actions of some black figures in literature.",
-                "Nos (os autores do site) escolhemos a autora Angela Davis, e nesse site esteremos mostrando a voce a historia de Angela e sua tragetoria como uma autora negra nos Estados Unidos.",
+                "We (the authors of the site) chose the author Angela Davis, and on this site we will be showing you the story of Angela and her story as a black author in the United States.",
                 "The site has been development in the subjects:",
                 "Web development 2",
                 "Language portuguese",
