--- a/src/components/language/pt-br.json
+++ b/src/components/language/pt-br.json
@@ -15,7 +15,8 @@
                 "https://brasilescola.uol.com.br/filosofia/angela-davis.htm",
                 "https://www.hypeness.com.br/2017/01/a-vida-e-a-luta-de-angela-davis/",
                 "https://www.geledes.org.br/angela-davis-2/",
-                "disponiveis apenas em português"
+                "disponiveis apenas em português",
+                "Sobre o Projeto"
             ]
         
     },
