--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -15,7 +15,8 @@
                 "https://brasilescola.uol.com.br/filosofia/angela-davis.htm",
                 "https://www.hypeness.com.br/2017/01/a-vida-e-a-luta-de-angela-davis/",
                 "https://www.geledes.org.br/angela-davis-2/",
-                "Available just in portuguese"
+                "Available just in portuguese",
+                "About the Project"
             ]
         
         },
