--- a/src/components/language/pt-br.json
+++ b/src/components/language/pt-br.json
@@ -24,7 +24,6 @@
   },
   "menu": ["início", "Redações", "Angela Davis", "Quem somos?", "Contato"],
   "headerMenu": "Navegue pelo site",
-  
   "AD": {
     "header": "Angela Davis",
     "body": ["A vida e luta de Angela Davis:", "Quem é?",
@@ -44,5 +43,37 @@
       "Duras críticas",
       "Em 1975, Angela sofreu graves críticas pelo dissidente russo Aleksandr Solzhenitsyn, ele acusava ela de ser hipócrita por simpatizar com a URSS, ao negligenciar as condições dos prisioneiros políticos em regimes comunistas e por ignorar uma carta de presos políticos tchecos perseguidos pelo estado lhe pedindo ajuda."
     ]
+  },
+  "Who":{
+      "Header":"Sobre nós",
+      "Body":{
+        "imgs":["./img/Neabi.png","./img/Fabio.jpg","./img/Guilherme.gif","./img/Rafael.gif","./img/Malungos.jpeg"],
+        "describe":["De natureza propositiva e consultiva, o Núcleo de Estudos Afro-Brasileiros e Indígenas (Neabi) tem a função de auxiliar no direcionamento de estudos, pesquisas e ações de extensão que promovam a reflexão sobre as questões étnico-raciais.\nVinculado às Direções de Ensino, Pesquisa e Extensão dos campi do IFMS, sob as diretrizes da Pró-Reitoria de Extensão (Proex), o Neabi também busca contribuir para a implementação da exigência legal que obriga incluir no currículo escolar a temática “História e Cultura Afro-Brasileira e Indígena”.\nO Regulamento do Núcleo de Estudos Afro-brasileiros e Indígenas do IFMS traz as finalidades, objetivos, estrutura organizacional e competências do Neabi.",
+          "Possui graduação em Engenharia da Computação - Faculdades Associadas de São Paulo (2006), especialização pela FACEL em Docência em Ciência e Tecnologia da Informação (2018) e especialização pela FIAR em Licenciatura Pedagógica em História. Atualmente é professor efetivo do IFMS. Tem experiência na área de Ciência da Computação, com ênfase em Análise e Desenvolvimento/Desenvolvimento Web. Atualmente do Campus IFMS-Campo Grande",
+          "Possui graduação em Ciências Sociais pela Universidade Estadual Paulista Júlio de Mesquita Filho (2009), mestrado em Educação pela Universidade Estadual Paulista Júlio de Mesquita Filho (2012) e doutorado em Educação pela Universidade Estadual Paulista Júlio de Mesquita Filho (2018). Atualmente é docente de sociologia do Instituto Federal de Educação, Ciência e Tecnologia de Mato Grosso do Sul. Tem experiência na área de Educação, com ênfase em Educação, atuando principalmente nos seguintes temas: Educação, Relações étnico-raciais,Racismo. Atualmente do Campus IFMS-três Lagoas.",
+          "Doutorando em Letras/Linguagem literária e interfaces sociais: estudos comparados pela UNIOSTE, com a pesquisa sobre o processo de análise crítica literária feminista em território nacional no romance de Conceição Evaristo, Insubmissas Lágrimas de mulheres; mestre em Letras/Literatura e práticas culturais (Bolsista FUNDECT) pela Universidade Federal da Grande Dourados (2017), onde analisou a construção do sujeito que sofre com os efeitos da imigração no romance, Americanah (2013), da nigeriana Chimamanda Ngozi Adichie. Graduou-se em Letras Português/Inglês e suas respectivas Literaturas pela Universidade Estadual de Mato Grosso do Sul (2014); Lecionou no programa de iniciação à docência (PIBID/2014). Campus IFMS-Campo Grande.",
+          "Os Malungos de Zumbi e Dandara (M.Z.D) é um projeto de extensão voltado à formação básica para a educação das relações étnico-raciais na Escola municipal Olyntho Mancini, a partir do currículo escolar e da etnomatemática."
+        ],
+        "names":["NEABI","Fabio Faria","Guilherme Tomaselli","Rafael Souza","M.Z.D"],
+        "more":{
+          "NEABI":{
+            "header":"Neabi - Objetivos:",
+            "Objetivos":["Promover ações de valorização das identidades negra e indígenas",
+                         "Realizar discussões sobre os componentes curriculares dos cursos ofertados pelo IFMS no sentido de concretizar o Plano Nacional de Implementação da Lei 11.645/2008",
+                         "Atuar como núcleo proponente e consultivo para assuntos referentes às políticas afirmativas, em especial à política de reserva de vagas para indígenas e afro-brasileiros nos processos seletivos e concursos públicos oferecidos"],
+             "Footer":"Para mais acesse:",
+             "Links":["https://www.ifms.edu.br/assuntos/extensao/inclusao-e-diversidade/estudos-afro-brasileiros-e-indigenas/nucleo-de-estudos-neabi",
+                      "https://www.facebook.com/NEABI-Instituto-Federal-de-Mato-Grosso-do-Sul-113495007043006"]
+          },
+          "M.Z.D":{
+            "header":"Os Malungos de Zumbi e Dandara projetos:",
+            "Objetivos":["IV concurso da beleza negra","V concurso da beleza negra","Divulgações por meio de redes socias de formas de combate ao racismo"],
+            "Footer":"Para mais acesse:",
+            "links":["https://www.instagram.com/malungosdezumbiedandara/",
+                      "https://www.facebook.com/Malungosdezumbiedandara/"]
+          }
+        }
+      },
+      "footer":["em progresso... Ei, que tal clicar nos nomes?","autores: Exodo Jaffar e João Lucas"]
   }
 }
