update: abrevia o nome do professor guilherme

--- a/src/components/language/pt-br.json
+++ b/src/components/language/pt-br.json
@@ -56,7 +56,7 @@
           "Aluno da turma 228, mas participa de algumas matérias pela 126 por meio da possibilidade dada pela instituição. Organizador do projeto Nhande Arandu da UFMS para a SNCT 2020; programador e desenvolvedor web além de criador do aplicativo EadGetTasks para a facilitação e organizações de tarefas do ambiente online do ifms.",
           "Aluno da turma 126, no entanto, começou originalmente na turma 228 e conseguiu passar para o semestre a frente de sua turma. Fez o ensino fundamental na instituição \"Escola Municipal Professor Múcio Teixeira Jr.\", onde conseguiu três honrarias ao mérito na OBMEP e, assim, concluindo duas vezes o programa de iniciação científica da OBMEP. Após isso passou por uma seletiva do IFMS onde cursa o ensino médio integrado com informática."
         ],
-        "names":["NEABI","Fabio Faria","Guilherme Tomaselli","Rafael Souza","M.Z.D","Êxodo Jaffar", "João Lucas"],
+        "names":["NEABI","Fabio Faria","Guilherme T.","Rafael Souza","M.Z.D","Êxodo Jaffar", "João Lucas"],
         "more":{
           "NEABI":{
             "header":"Neabi - Objetivos:",
