fix: retorna o nome do cara pra sem abreviação
Malditos nomes de objetos

--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -57,7 +57,7 @@
               "He is class 228 student, but does any subjects by the 126 class. Organizer of the project \"Nhande Arandu\" of \"UFMS\"; programmer and web developer besides being creator of the app EadGetTasks for facilitation and organizations of homework of distance learning of IFMS",
               "He is class 126 student, however, started originally in 228 class and got into for the semester in next him class. João did the elementary school on the institution municipal school \"Professor Múcio Teixeira Jr.\", where got three honors to merit in the OBMEP and so, Lucas has concluded two times the program of scientific initiation on OBMEP. After it, he has entered in IFMS by a selective where studies him high school and technic in informatic"
         ],
-            "names":["NEABI","Fabio Faria","Guilherme T.","Rafael Souza","M.Z.D","Êxodo Jaffar","João Lucas"],
+            "names":["NEABI","Fabio Faria","Guilherme Tomaselli","Rafael Souza","M.Z.D","Êxodo Jaffar","João Lucas"],
             "more":{
                 "NEABI":{
                     "header":"Neabi - Objectives:",
