add: bigtitle text

--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -111,6 +111,7 @@
     "Why":{
         "header":"Why should I study Angela?",
         "body":{
+          "bigTitle":"Why should I study Angela?",
           "title":"The Why:",
           "text":["The federal constitution of 1988, the most important legal document in the country, provides in its article 6, the right to access to culture as inherent to every Brazilian citizen. However, this prerogative has not reverberated with an emphasis on practice when observing the access to the culture of Afro peoples, thus hindering the universalization of this very important social right. From this perspective, it is imperative to analyze the factors that favor this situation.",
             "In a first analysis, the absence of government measures to combat the lack of access to this culture should be highlighted. In this sense, the study of black personalities such as Angela Davis, who, as far as she is concerned, is an important character in the construction of the current ideal image of society that we seek for all people, and especially for Afro culture, she represents a lot, since the main American movements like the Black Panthers. This situation, according to the ideas of contractualist philosopher John Locke, is configured as a violation of the \"social contract\", since the State does not fulfill its function of ensuring that citizens enjoy indispensable rights, such as the aforementioned social axis, the which unfortunately is evident in the country.",
