--- a/src/components/language/pt-br.json
+++ b/src/components/language/pt-br.json
@@ -110,6 +110,7 @@
   "Why":{
     "header":"Por quê estudar Angela?",
     "body":{
+      "bigTitle":"Por quê estudar Angela?",
       "title":"O Porquê:",
       "text":[
         "A constituição federal de 1988, documento jurídico mais importante do país, prevê em seu artigo 6°, o direito ao acesso à cultura como inerente a todo cidadão brasileiro. Conquanto, tal prerrogativa não tem se reverberado com ênfase na prática quando se observa o acesso à cultura dos povos afros, dificultando, deste modo, a universalização dese direito social tão importante. Diante dessa perspectiva, faz-se imperiosa a análise dos fatores que favorecem esse quadro.",
