--- a/src/components/language/en-usa.json
+++ b/src/components/language/en-usa.json
@@ -1,8 +1,8 @@
 {
     "home": {
-        "header": "Start",
+        "header": "About",
         "body": {
-            "header_title":"Angela Davis, a brief biography of a big Woman:", 
+            "header_title":"Angela Davis, a brief biography of a big Woman:",
             "content":[
                 "The project consist in web site development to tell about the history and actions of some black figures in literature.",
                 "We (the authors of the site) chose the author Angela Davis, and on this site we will be showing you the story of Angela and her story as a black author in the United States.",
@@ -17,11 +17,10 @@
                 "Available just in portuguese",
                 "About the Project"
             ]
-        
         },
         "footer": ["In progress...","Owners: Exodo Jaffar e João Lucas"]
     },
-    "menu":["Start","Why study Angela?","Angela Davis","Who are we?","Contact"],
+    "menu":["Home","About","Angela Davis","Who are we?","Contact"],
     "headerMenu":"navigate through the menu",
     "AD":{
         "header":"Angela Davis",
@@ -120,5 +119,17 @@
           "bottom":"the right card has a scrollbar",
           "toast":"click here to close"
           }
-        }
+        },
+        "ctt":{
+          "header":"Contact",
+          "body":{
+            "alert":"When you click to send your feedback, you agree with: be called by the typed name, receive emails about the news and in share your experience",
+            "title":"Contact us and/or share your email:",
+            "placeholders":{
+              "name":"type your name",
+              "email":"type your email",
+              "msg":"type your text *optional"
+            }
+          }
+      }
 }
